tests/NormalTests/paczka1/fuzzy1/73237510.err
Error in line 4: 7lQCa A584 61,7
Error in line 6: 7lQCa S279 82,4
Error in line 11: huHzr S279 66,3
Error in line 10: mBU S279 82,1
Error in line 35: IdiXVu A584 29,3
Error in line 37: IdiXVu S195 30,0
Error in line 36: G4v A584 62,5
